pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-app
  namespace: app
spec:
  containers:
  - name: django-container
    image:  krishnag6378/todo_app:latest
    ports:
    - containerPort: 8001
