ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-app-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: app-krishna.com   # change this to your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-app-service   # must match your Service
                port:
                  number: 80               # must match Service port
